# ninja-python-django

./: .env.example  .gitignore  README-CH.md  README.md  manage.py  pyproject.toml
ninjadjangoapp/: apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
ninjadjangoapp/migrations/: 0001_initial.py
ninjadjangoapp/tests/: base.py  test_create_task.py  test_delete_task_by_id.py  test_get_all_tasks.py  test_get_task_by_id.py  test_update_task_by_id.py
ninjadjangoproject/: asgi.py  connection.py  settings.py  urls.py  wsgi.py
